@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/spell_attack.c: apply patch #1096921 courtesy Salathar.
+   Charmed monsters now lose the 'generator' flag, to prevent
+   things like mice outbreak in bigworld maps.
+Ryo 2005-01-07
+
 plugin/plugin_pyhton.c, plugin/include/plugin_python.h: Remove obsolete
    functions: SetGender, SetRank, SetAlignment, SetGuildForce, GetGuildForce,
    CreatePlayerForce, CreatePlayerInfo, GetPlayerInfo, GetNextPlayerInfo,
